// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogHost Tests Show MRS DB Object Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsSchemaDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Object
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <label
            class="msg label sectionTitle"
            data-tooltip="expand"
          >
            Enter Configuration Values for the New MySQL REST Object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Service this REST Object belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Schema Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="schema"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs_notes
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Schema this DB Object belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Object Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path to access the object, has to start with /
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Database Object Name
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The name of the database object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            CRUD Operations
          </label>
          <div
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="crudOperations"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          >
            <label
              class="msg label tag"
              data-tooltip="expand"
              draggable="true"
            >
              READ
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The CURD operations allowed for this database object
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column; --tabItem-border-width: 0px; --content-separator-width: 0px;"
          >
            <div
              class="msg container tabAreaContainer"
              style="flex-direction: row;"
            >
              <div
                class="scrollable"
              >
                <div
                  class="msg container tabArea stretched"
                  style="flex-direction: row;"
                >
                  <div
                    class="msg button tabItem selected"
                    id="page0"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Basic
                    </label>
                  </div>
                  <div
                    class="msg button tabItem"
                    id="page1"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Parameters
                    </label>
                  </div>
                  <div
                    class="msg button tabItem"
                    id="page2"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Advanced
                    </label>
                  </div>
                  <div
                    class="msg button tabItem"
                    id="page3"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Options
                    </label>
                  </div>
                </div>
                <div
                  class="scrollbar"
                >
                  <div
                    class="slider"
                  />
                </div>
              </div>
            </div>
            <div
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Result Format
                  </label>
                  <div
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="crudOperationFormat"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      FEED
                    </label>
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Items per Page
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      class="msg input valueEditor"
                      id="itemsPerPage"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Comments
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      class="msg input valueEditor"
                      id="comments"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Row Ownership
                  </label>
                  <label
                    class="msg checkbox checked valueEditor"
                    id="rowUserOwnershipEnforced"
                    tabindex="0"
                  >
                    <span
                      class="checkMark"
                    />
                    Enforce Row User Ownership
                  </label>
                  <label
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Enables the MRS row ownership management
                  </label>
                </div>
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Row Ownership Field
                  </label>
                  <div
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="rowUserOwnershipColumn"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      created_by
                    </label>
                  </div>
                  <label
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Field that holds the user ID that should be managed by MRS
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          draggable="true"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          draggable="true"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Schema Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsSchemaDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        id="contentGrid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              localhost
            </label>
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path of the REST Service this REST Schema belongs to
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Comments to describe this REST Schema.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Schema Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The request path to access the schema, has to start with /
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Schema Name
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The name of the corresponding database schema.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Items per Page
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="itemsPerPage"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Options
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <textarea
              class="msg input valueEditor"
              id="options"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Additional options in JSON format
          </label>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          draggable="true"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          draggable="true"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Service Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="mrsServiceDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        id="contentGrid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            REST Service Path
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="servicePath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The URL context root of this service.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 5;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            Comments to describe this MRS Service.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Host Name Filter
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="hostName"
              placeholder="<Host Name Filter:Port>"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            If specified, only requests for this host will served.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 3;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Supported Protocols
          </label>
          <div
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="protocols"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          />
          <label
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The supported protocols.
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 2;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service Flags
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Enabled
          </label>
          <label
            class="msg checkbox checked valueEditor"
            id="makeDefault"
            tabindex="0"
          >
            <span
              class="checkMark"
            />
            Default
          </label>
        </div>
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column; --tabItem-border-width: 0px; --content-separator-width: 0px;"
          >
            <div
              class="msg container tabAreaContainer"
              style="flex-direction: row;"
            >
              <div
                class="scrollable"
              >
                <div
                  class="msg container tabArea stretched"
                  style="flex-direction: row;"
                >
                  <div
                    class="msg button tabItem selected"
                    id="page0"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Options
                    </label>
                  </div>
                  <div
                    class="msg button tabItem"
                    id="page1"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Authentication
                    </label>
                  </div>
                  <div
                    class="msg button tabItem"
                    id="page2"
                    role="button"
                    tabindex="-1"
                  >
                    <label
                      class="msg label"
                      data-tooltip="inherit"
                    >
                      Authentication Apps
                    </label>
                  </div>
                </div>
                <div
                  class="scrollbar"
                >
                  <div
                    class="slider"
                  />
                </div>
              </div>
            </div>
            <div
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Options in JSON Format:
                  </label>
                  <div
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <textarea
                      class="msg input valueEditor"
                      id="options"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          draggable="true"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          draggable="true"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show Prompt Dialog (snapshot) 1`] = `
<div
  class="msg portal"
  id="shellPromptDialog"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible valueEditDialog"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-terminal"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Feedback Requested
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg grid"
        id="contentGrid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Lorem ipsum dolor sit amet
          </label>
          <div
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="OK"
          class="msg button"
          draggable="true"
          id="ok"
          role="button"
          tabindex="0"
        >
          OK
        </div>
        <div
          caption="Cancel"
          class="msg button"
          draggable="true"
          id="cancel"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Standard Rendering (snapshot) 1`] = `
<DialogHost>
  <PasswordDialog
    key="passwordDialog"
  />
  <MrsAuthDialog
    key="mrsAuthDialog"
  />
  <ValueEditDialog
    key="valueEditDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        {
          "begin": [],
          "end": [
            <Button
              caption="OK"
              disabled={false}
              id="ok"
              onClick={[Function]}
            />,
            <Button
              caption="Cancel"
              id="cancel"
              onClick={[Function]}
            />,
          ],
        }
      }
      caption={
        <p>
          <Icon
            disabled={false}
            src={389}
          />
          <Label />
        </p>
      }
      className="msg valueEditDialog"
      container={
        <body
          theme="dark"
        />
      }
      content={
        <Grid
          columnGap={16}
          columns={8}
          id="contentGrid"
          rowGap={16}
        />
      }
      id=""
      onClose={[Function]}
    >
      <Portal
        container={
          <body
            theme="dark"
          />
        }
        id=""
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
    <Menu
      onItemClick={[Function]}
      orientation="column"
      placement="right-start"
    >
      <Popup
        className="msg menu"
        onClose={[Function]}
        onKeyDown={[Function]}
        onOpen={[Function]}
        orientation="column"
        pinned={false}
        placement="right-start"
        showArrow={false}
      >
        <Portal
          className="popupPortal"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
        />
      </Popup>
    </Menu>
  </ValueEditDialog>
  <ConfirmDialog
    key="confirmDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        {
          "end": [],
        }
      }
      caption={
        <p>
          <Icon
            disabled={false}
            src={276}
          />
          <Label>
            Confirm
          </Label>
        </p>
      }
      className="msg confirmDialog"
      container={
        <body
          theme="dark"
        />
      }
      content={
        <Container
          orientation="column"
        >
          
          <Container
            className="description"
            orientation="column"
          />
        </Container>
      }
      onClose={[Function]}
    >
      <Portal
        container={
          <body
            theme="dark"
          />
        }
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
  </ConfirmDialog>
  <MrsServiceDialog
    key="mrsServiceDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsServiceDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mrsServiceDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsServiceDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsServiceDialog>
  <MrsSchemaDialog
    key="mrsSchemaDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsSchemaDialog>
  <MrsContentSetDialog
    key="mrsContentSetDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsContentSetDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mrsContentSetDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsContentSetDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsContentSetDialog>
  <MrsAuthenticationAppDialog
    key="mrsAuthenticationAppDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsAuthenticationAppDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mrsAuthenticationAppDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsAuthenticationAppDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsAuthenticationAppDialog>
  <MrsUserDialog
    key="mrsUserDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsUserDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mrsUserDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mrsUserDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsUserDialog>
  <MdsHWClusterDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWClusterDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mdsHWClusterDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mdsHWClusterDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWClusterDialog>
  <MdsHWLoadDataDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWLoadDataDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          {
            "begin": [],
            "end": [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <p>
            <Icon
              disabled={false}
              src={389}
            />
            <Label />
          </p>
        }
        className="msg valueEditDialog"
        container={
          <body
            theme="dark"
          />
        }
        content={
          <Grid
            columnGap={16}
            columns={8}
            id="contentGrid"
            rowGap={16}
          />
        }
        id="mdsHWLoadDataDialog"
        onClose={[Function]}
      >
        <Portal
          container={
            <body
              theme="dark"
            />
          }
          id="mdsHWLoadDataDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            className="popupPortal"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWLoadDataDialog>
</DialogHost>
`;
